# Project

./: README.md
AtmosSnap Forecast/: index.html  script.js  style.css
Birthday/: index.html  script.js  style.css
Calculator/: calculator.html  index.html  script.js  style.css
Coding Performance Tracker/: index.html  script.js  style.css
Currency Converter/: index.html  script.js  styles.css
Number Converter/: index.html  script.js  styles.css
Space Facts/: index.html  script.js  styles.css
Tools/: calculator.html  index.html  script.js  style.css
bmi-calculator/: index.html  script.js  style.css
bmi-calculator/public/: index.html
bmi-calculator/src/: App.js  styles.js
bmi-calculator/src/components/: BMICalculator.js  BMIChart.js
expense-tracker/: index.html  login.html  styles.css  tracker.js
performance-tracker/: CMakeLists.txt  main.cpp
performance-tracker/html/: add_platform.html  dashboard.html  index.html  signup.html  styles.css
